# MedLens

./: .gitignore  AGENTS.md  BUILD_PROGRESS.md  CLAUDE.md  README.md  README_PWA.md  RICH_TERMINAL_CHAT_PLAN.md  android_changelog.md  faers_explore.ipynb  gaps.md  main.py  medlens-plan.md  medlens.cli  new_plan.md  pyproject.toml  run.sh
android/: .gitignore  README.md  build.gradle.kts  gradle.properties  gradle_commands.md  settings.gradle.kts  web-emu.bat
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/core-agent/: build.gradle.kts
android/core-data/: build.gradle.kts
chore/: vlm0.7.3.md
data/: .gitignore  1_tokenize_save.ipynb  faers_explore.py  faers_explorer.py  kaggle_multi_gpu_finetune.ipynb  medlens_finetune.ipynb  pg_builder.py  tablesize.sql  training_data_builder.py
data/finetune/: .gitignore  gemma-4-E2B-it_qlora_dataset_2026-04-18-11-14-41.yaml  medlens_data_rebuild.ipynb  medlens_finetune.ipynb  medlens_kaggle_rebuild.ipynb
data/medlens_tokenized/finetune/: medlens_kaggle_finetune.ipynb
deprecated/: .gitignore  README.md
deprecated/finetune/outputs/: README.md
medlens/: __init__.py  agent.py  agent_loop.py  cli.py
medlens/artifacts/: __init__.py  build_evidence.py  build_normalization.py  common_meds.py  schema.py
medlens/chat/: __init__.py  app.py  commands.py  renderer.py  session.py
medlens/tools/: __init__.py  local_safety.py  registry.py
tests/: fixture_artifacts.py  test_agent.py  test_agent_loop.py  test_chat_commands.py  test_cli.py  test_evidence_artifact.py  test_local_safety_tools.py  test_normalization_artifact.py  test_tool_registry.py
web/: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/public/: manifest.webmanifest
web/scripts/: publish-hf.ts
web/src/: main.tsx
web/src/agent/: commands.ts  loop.ts  prompts.ts
web/src/chat/: session.ts
web/src/db/: hf-fetch.ts  meta.ts  normalize.ts  opfs.ts  sqlite.ts  stores.ts  types.ts  version.ts
web/src/providers/: anthropic.ts  bedrock.ts  gemini.ts  keystore.ts  template.ts  types.ts
web/src/tools/: registry.ts  safety-store.ts  sql.ts  types.ts
web/src/ui/: App.tsx  Composer.tsx  FirstRunSetup.tsx  Message.tsx  MessageList.tsx  Settings.tsx  Sidebar.tsx  ToolTrace.tsx  conversation-store.ts  index.css  streaming.ts
(+37 files in other folders)
