[project]
name = "medlens"
version = "0.0.1.dev0"
description = "An on-device polypharmacy drug interaction agent powered by fine-tuned Gemma 4 E2B"
readme = "README.md"
requires-python = ">=3.11, <3.13"
authors = [
    { name = "Ashutosh", email = "prog.mishra@gmail.com" },
]
dependencies = [
    "bitsandbytes>=0.49.2",
    "deepspeed>=0.18.9",
    "kaggle>=2.0.1",
    "optimum==1.24.0",
    "pandas>=3.0.2",
    "psycopg[binary]>=3.3.3",
    "python-dotenv",
    "pytorch-tokenizers>=1.2.0",
    "tiktoken>=0.12.0",
    "torch==2.10.0",
    "torchao==0.15.0",
    "transformers==5.5.0",
    "trl>=0.10.1",
    "unsloth==2026.4.6",
    "unsloth-zoo==2026.4.8",
    "uv>=0.11.6",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"

[tool.uv]
environments = ["sys_platform == 'linux'"]
